# needle

./: .gitignore  README.md
apps/: __init__.py  mlp_resnet.py  models.py  simple_ml.py  simple_ml_hw0.py  simple_ml_hw1.py
mugrade/: __init__.py
needle/: __init__.py  autograd.py  backend_numpy.py  optim.py
needle/backend_ndarray/: __init__.py  device.py  functions.py  ndarray.py  ndtype.py
needle/data/: data_basic.py  data_transforms.py
needle/data/datasets/: __init__.py  cifar10_dataset.py  mnist_dataset.py  ndarray_dataset.py
needle/init/: __init__.py  init_basic.py  init_initializers.py
needle/nn/: __init__.py  nn_basic.py  nn_conv.py
needle/ops/: __init__.py  ops_logarithmic.py  ops_mathematic.py  ops_tuple.py
norch/: CMakeLists.txt  run.sh
norch/src/: main.cpp  ndarray_backend_cpu.cc  ndarray_backend_cuda.cu
tests/: __init__.py  test_autograd_hw.py  test_cifar_ptb_data.py  test_conv.py  test_data.py  test_nd_backend.py  test_ndarray.py  test_nn_and_optim.py  test_simple_ml.py
